src/objects/Tier_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Benefit__c</fullName>
        <label>Benefit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Premier_Benefit__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Premier_Benefit__c.Status__c</field>
                <operation>equals</operation>
                <value>Future</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Premier_Benefit__c</referenceTo>
        <relationshipLabel>Tier Benefits</relationshipLabel>
        <relationshipName>Tier_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Premier_Tier__c</fullName>
        <label>Premier Tier</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Premier_Tier__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Premier_Tier__c.Status__c</field>
                <operation>equals</operation>
                <value>Future</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Premier_Tier__c</referenceTo>
        <relationshipLabel>Tier Benefits</relationshipLabel>
        <relationshipName>Tier_Benefits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Send_Outbound_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be true when both Premier Tier and all Premier Benefits are either active or inactive. The checkbox will be untrue when any Premier Tier or Premier Benefits is future effective. This field is being used to trigger the outbound message for the Tier Benefit record.</description>
        <label>Send Outbound Message</label>
        <type>Checkbox</type>
    </fields>
    <label>Tier Benefit</label>
    <nameField>
        <label>Tier Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>